<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.philliphunter.hw1.MainActivity"
    >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtWeight"
        android:hint="@string/hint_weight"
        android:singleLine="false"
        android:layout_x="86dp"
        android:layout_y="56dp"
        android:layout_alignBaseline="@+id/switchSex"
        android:layout_alignBottom="@+id/switchSex"
        android:layout_toRightOf="@+id/lblWeight"
        android:layout_toEndOf="@+id/lblWeight"
        android:layout_marginRight="100dp"
        android:maxLength="3"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchSex"
        android:text="@string/label_sex"
        android:textOff="@string/switch_female"
        android:textOn="@string/switch_male"
        android:showText="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_weight"
        android:id="@+id/lblWeight"
        android:layout_alignBottom="@+id/switchSex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/txtWeight"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_drink_size"
        android:id="@+id/lblDrinkSize"
        android:layout_below="@+id/btnSave"
        android:layout_alignLeft="@+id/btnSave"
        android:layout_alignStart="@+id/btnSave"
        android:layout_marginTop="18dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblDrinkSize"
        android:layout_alignLeft="@+id/txtWeight"
        android:layout_alignStart="@+id/txtWeight"
        android:orientation="horizontal"
        android:id="@+id/radGroupSize">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_1oz"
            android:id="@+id/rad1oz"
            android:checked="true"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_5oz"
            android:id="@+id/rad5oz"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_12oz"
            android:id="@+id/rad12oz"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_alcohol_percent"
        android:id="@+id/lblAlcohol"
        android:layout_below="@+id/radGroupSize"
        android:layout_alignRight="@+id/lblDrinkSize"
        android:layout_alignEnd="@+id/lblDrinkSize"
        android:layout_marginTop="25dp"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seekAlcoholPercent"
        android:layout_alignBottom="@+id/lblAlcohol"
        android:layout_toRightOf="@+id/lblAlcohol"
        android:layout_toEndOf="@+id/lblAlcohol"
        android:minWidth="150dp"
        android:max="5"
        android:progress="1"
        android:indeterminate="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="#%"
        android:id="@+id/lblAlcoholPercentIndicator"
        android:layout_alignTop="@+id/lblAlcohol"
        android:layout_alignBottom="@+id/seekAlcoholPercent"
        android:layout_alignRight="@+id/radGroupSize"
        android:layout_alignEnd="@+id/radGroupSize"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add_drink"
        android:id="@+id/btnAddDrink"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lblAlcohol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add_reset"
        android:id="@+id/btnReset"
        android:layout_alignBaseline="@+id/btnAddDrink"
        android:layout_alignBottom="@+id/btnAddDrink"
        android:layout_alignRight="@+id/lblAlcoholPercentIndicator"
        android:layout_alignEnd="@+id/lblAlcoholPercentIndicator"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_bac_level"
        android:id="@+id/lblBAC"
        android:layout_below="@+id/btnAddDrink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:gravity="center_horizontal"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progBAC"
        android:layout_below="@+id/lblBAC"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp"
        android:layout_alignRight="@+id/btnReset"
        android:layout_alignEnd="@+id/btnReset"
        android:max="25"
        android:longClickable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_your_status"
        android:id="@+id/lblYourStatus"
        android:gravity="right"
        android:layout_below="@+id/progBAC"
        android:layout_alignRight="@+id/btnAddDrink"
        android:layout_alignEnd="@+id/btnAddDrink"
        android:layout_marginTop="25dp"
        android:textSize="22dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status_safe"
        android:id="@+id/lblStatusIndicator"
        android:layout_alignBottom="@+id/lblYourStatus"
        android:layout_alignLeft="@+id/btnReset"
        android:layout_alignStart="@+id/btnReset"
        android:gravity="left"
        android:background="#ee00ff"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="22dp"/>

</RelativeLayout>
